syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/rickyjia2018/peakpal-carpool/pb";

message Station {
    int64 ID = 1;
    int64 tripe_id = 2;
    string station_name = 3;
    int64 arrival_minutes =4;
    google.protobuf.Timestamp created_at = 5;
}
 
message CreateStationRequest {
    int64 tripe_id = 1;
    string station_name = 2;
    int64 arrival_minutes =3;
}
 
message CreateStationResponse {
    Station station = 1;
}

message ListStationsRequest{
    int64 trip_id =1;
}

message ListStationsResponse{
    repeated Station stations = 1;
}

message DeleteStationRequest{
    int64 id =1;
}

message DeleteStationResponse{
    bool success = 1;
}